$Id: CHANGES,v 1.265 2005/01/13 15:41:05 stelian Exp $

Changes between versions 0.4b38 and 0.4b39 (released ???????????????)
=====================================================================

1.	The newly added dump_on_cd_3 example was buggy, replace it
	with an updated version from Andrew Basterfield
	<bob@cemetery.homeunix.org>.

2.	Made restore to chdir() back into the initial directory when
	dumping core while aborting a comparision operation. The
	previous behaviour was to write the corefile at the root of
	the directory being compared, which could very well be 
	read only and preventing the corefile generation. Thanks
	to Kenneth Porter <shiva@sewingwitch.com> for the bug report.

Changes between versions 0.4b37 and 0.4b38 (released January 7, 2005)
=====================================================================

1.	Fix a couple of troff syntax bugs in the man pages.
	Thanks to Eric Raymond <esr@thyrsus.com> for the patch.

2.	Made restore use either libncurses or libtermcap, depending
	on which one is available at configure time.

3.	Fixed restore negative size display bug when comparing a
	dump containing files over 2GB. Thanks to Steve Bonds
	<sbonds@users.sourceforge.net> for the bug report.

4.	Do not save directory entries to non-dumped inodes 
	(excluded from dump). This will eliminate the 'missing
	file' warnings when doing 'restore -C'.

5.	Fix dump crash when backuping a huge (2TB) filesystem,
	due to a bogus calculation on the inode map size.
	Thanks to Kevin B. Haines <K.B.Haines@rl.ac.uk> for 
	submitting the bug and testing the fix.

6.	Fix a problem in restore where the final \0 in the symbolic
	link names could have been lost, generating corrupt filenames.
	Thanks to Kyle Wilson <kyle.wilson@amd.com> for reporting the
	bug.

7.	Implemented a hash list for the directory names in restore.
	The linear list used before caused problems in interactive
	restores when dealing with directories having thousands of